nullaway_error_e1e9759d-291f-4542-9a4a-36977ce69d7e.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/MapImage.java:40: error: [NullAway] initializer method does not guarantee @NonNull fields transparentcolor (line 24), absolutePath (line 34) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public MapImage() {
         ^
    (see http://t.uber.com/nullaway )
